--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "video-calling-app",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,16 +10,20 @@
   },
   "dependencies": {
     "next": "13.5.6",
+    "peerjs": "^1.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.14.1",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
+    "postcss-nesting": "^12.0.3",
     "tailwindcss": "^3"
   }
 }
