--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.341.0",
     "next": "13.5.6",
     "peerjs": "^1.5.2",
     "react": "^18",
